fix word wrapping bug on tweets

--- a/public/styles/tweet-history.css
+++ b/public/styles/tweet-history.css
@@ -132,6 +132,7 @@
     flex-direction: column;
     border: 4px solid black;
     width: 100%;
+    word-break: break-all;
   }
 
   #tweet-post {
